Display coordinate in <pre>

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Shadowmap 2D</title>
-<canvas id="canvas" width="256" height="256">
+<canvas id="canvas" width="256" height="256"></canvas>
+<pre id="display"></pre>
 <script type="module" src="main.js"></script>
