Add a rotation slider input.

--- a/webgpu.html
+++ b/webgpu.html
@@ -9,6 +9,10 @@
 <title>Shadowmap 2D (WebGPU)</title>
 <h1>Rendering</h1>
 <canvas id="rendering-canvas" width="256" height="256"></canvas>
+<div>
+    <label for="rotation"></label>
+    <input type="range" id="rotation" min="0" max="360" value="90">
+</div>
 <h1>Shadow map</h1>
 <canvas id="shadow-map-canvas" width="32" height="1"></canvas>
 <pre id="display"></pre>
