Fix slider jitter

--- a/webgpu.html
+++ b/webgpu.html
@@ -5,6 +5,9 @@
         width: 640px;
         image-rendering: pixelated;
     }
+    label {
+        display: block;
+    }
 </style>
 <title>Shadowmap 2D (WebGPU)</title>
 <h1>Rendering</h1>
