Set shadow map width to 100%.

--- a/webgpu.html
+++ b/webgpu.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <style>
     #shadow-map-canvas {
-        width: 640px;
+        width: 100%;
         image-rendering: pixelated;
     }
     label {
