--- a/webgpu.html
+++ b/webgpu.html
@@ -16,7 +16,7 @@
     <label for="rotation"></label>
     <input type="range" id="rotation" min="-180" max="180" value="0">
 </div>
+<p>Use the WASD keys to move the spotlight.</p>
 <h1>Shadow map</h1>
 <canvas id="shadow-map-canvas" width="32" height="1"></canvas>
-<pre id="display"></pre>
 <script type="module" src="webgpu.js"></script>
