--- a/cpu.html
+++ b/cpu.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Shadowmap 2D</title>
+<title>Shadowmap 2D (CPU)</title>
 <canvas id="canvas" width="256" height="256"></canvas>
 <pre id="display"></pre>
-<script type="module" src="main.js"></script>
+<script type="module" src="cpu.js"></script>
