Show frame render time.

--- a/webgpu.html
+++ b/webgpu.html
@@ -17,6 +17,7 @@
     <input type="range" id="rotation" min="-180" max="180" value="0">
 </div>
 <p>Use the WASD keys to move the spotlight.</p>
+<pre id="stats"></pre>
 <h1>Shadow map</h1>
 <canvas id="shadow-map-canvas" width="1024" height="1"></canvas>
 <script type="module" src="webgpu.js"></script>
