Add FOV slider.

--- a/webgpu.html
+++ b/webgpu.html
@@ -25,6 +25,8 @@
     <input type="range" id="rotation" min="-180" max="180" value="0">
     <label for="focal-length"></label>
     <input type="range" id="focal-length" min="0.05" max="1.0" step="0.05" value="0.1">
+    <label for="fov"></label>
+    <input type="range" id="fov" min="5" max="130" value="60">
 </div>
 <p>Use the WASD keys to move the spotlight.</p>
 <pre id="stats"></pre>
