--- a/webgpu.html
+++ b/webgpu.html
@@ -2,7 +2,13 @@
 <meta charset="utf-8">
 <style>
     #shadow-map-canvas {
-        width: 100%;
+        /**
+         * We're actually distorting the shadow map here, making it taller
+         * than it really is, but that's OK because we want it to be
+         * legible.
+         */
+        width: 1024px;
+        height: 32px;
         image-rendering: pixelated;
     }
     label {
