--- a/webgpu.html
+++ b/webgpu.html
@@ -36,6 +36,7 @@
 </div>
 <p>Use the WASD keys to move the spotlight.</p>
 <p>Use the slider above, or the Q and E keys, to rotate the spotlight.</p>
+<pre id="position"></pre>
 <pre id="stats"></pre>
 <h1>Shadow map</h1>
 <canvas id="shadow-map-canvas" width="1024" height="1"></canvas>
