Better shadow map rendering, show focal length slider.

--- a/webgpu.html
+++ b/webgpu.html
@@ -10,17 +10,10 @@
         width: 1024px;
         height: 32px;
         image-rendering: pixelated;
+        border: 1px solid black;
     }
     label {
         display: block;
-    }
-
-    /**
-     * Changing this doesn't actually affect the rendering right now,
-     * so I'm hiding it to reduce clutter.
-     */
-    #focal-length, label[for="focal-length"] {
-        display: none;
     }
 </style>
 <title>Shadowmap 2D (WebGPU)</title>
