--- a/webgpu.html
+++ b/webgpu.html
@@ -23,7 +23,9 @@
     <label for="rotation"></label>
     <input type="range" id="rotation" min="-179" max="180" value="0">
     <label for="focal-length"></label>
-    <input type="range" id="focal-length" min="0.05" max="1.0" step="0.05" value="0.1">
+    <input type="range" id="focal-length" min="0.05" max="0.95" step="0.05" value="0.1">
+    <label for="max-distance"></label>
+    <input type="range" id="max-distance" min="1" max="4.0" step="0.1" value="2">
     <label for="fov"></label>
     <input type="range" id="fov" min="5" max="130" value="60">
 </div>
