--- a/webgpu.html
+++ b/webgpu.html
@@ -31,8 +31,9 @@
 </div>
 <p>Use the WASD keys to move the spotlight.</p>
 <p>Use the slider above, or the Q and E keys, to rotate the spotlight.</p>
-<pre id="position"></pre>
-<pre id="stats"></pre>
+<pre id="rendering-stats"></pre>
 <h1>Shadow map</h1>
 <canvas id="shadow-map-canvas" width="1024" height="1"></canvas>
 <script type="module" src="webgpu.js"></script>
+<pre id="shadow-map-stats"></pre>
+<pre id="stats"></pre>
