Get rid of cpu implementation, rename webgpu to index.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
 <pre id="rendering-stats"></pre>
 <h1>Shadow map</h1>
 <canvas id="shadow-map-canvas" width="1024" height="1"></canvas>
-<script type="module" src="webgpu.js"></script>
+<script type="module" src="main.js"></script>
 <pre id="shadow-map-stats"></pre>
 <pre id="stats"></pre>
