--- a/index.html
+++ b/index.html
@@ -24,22 +24,31 @@
     .hidden {
         display: none;
     }
+    .rendering-wrapper {
+        display: flex;
+        flex-direction: row;
+        gap: 1em;
+    }
 </style>
 <title>Shadowmap 2D (WebGPU)</title>
 <div id="fatal-error" class="hidden"></div>
 <h1>Rendering</h1>
 <p>Use the WASD keys to move the spotlight.</p>
 <p>Use the Q and E keys to rotate the spotlight.</p>
-<canvas id="rendering-canvas" width="512" height="512"></canvas>
-<div>
-    <label for="focal-length"></label>
-    <input type="range" id="focal-length" min="0.05" max="0.95" step="0.05" value="0.1">
-    <label for="max-distance"></label>
-    <input type="range" id="max-distance" min="1" max="4.0" step="0.1" value="2">
-    <label for="fov"></label>
-    <input type="range" id="fov" min="5" max="130" value="60">
+<div class="rendering-wrapper">
+    <canvas id="rendering-canvas" width="512" height="512"></canvas>
+    <div>
+        <div>
+            <label for="focal-length"></label>
+            <input type="range" id="focal-length" min="0.05" max="0.95" step="0.05" value="0.1">
+            <label for="max-distance"></label>
+            <input type="range" id="max-distance" min="1" max="4.0" step="0.1" value="2">
+            <label for="fov"></label>
+            <input type="range" id="fov" min="5" max="130" value="60">
+        </div>
+        <pre id="rendering-stats"></pre>
+    </div>
 </div>
-<pre id="rendering-stats"></pre>
 <h1>Shadow map</h1>
 <canvas id="shadow-map-canvas" width="1024" height="1"></canvas>
 <script type="module" src="main.js"></script>
