--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 <title>Shadowmap 2D (WebGPU)</title>
 <div id="fatal-error" class="hidden"></div>
 <h1>Rendering</h1>
-<p>Use the WASD keys to move the spotlight.</p>
-<p>Use the Q and E keys to rotate the spotlight.</p>
+<p>Use the WASD keys to move the spotlight. Use Q and E to rotate it.</p>
 <div class="rendering-wrapper">
     <canvas id="rendering-canvas" width="512" height="512"></canvas>
     <div>
