Link to GitHub repo.

--- a/index.html
+++ b/index.html
@@ -53,3 +53,4 @@
 <script type="module" src="main.js"></script>
 <pre id="shadow-map-stats"></pre>
 <pre id="stats"></pre>
+<p>For more details, see the <a href="https://github.com/toolness/shadowmap-2d">GitHub repository</a>.</p>
