--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         gap: 1em;
     }
 </style>
-<title>Shadowmap 2D (WebGPU)</title>
+<title>Top-down 2D scene using a shadow map</title>
 <div id="fatal-error" class="hidden"></div>
-<h1>Rendering</h1>
+<h1>Top-down 2D scene using a shadow map</h1>
 <p>Use the WASD keys to move the spotlight. Use Q and E to rotate it.</p>
 <div class="rendering-wrapper">
     <canvas id="rendering-canvas" width="512" height="512"></canvas>
