Click and drag to draw new walls.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <title>Top-down 2D scene using a shadow map</title>
 <div id="fatal-error" class="hidden"></div>
 <h1>Top-down 2D scene using a shadow map</h1>
-<p>Use the WASD keys to move the spotlight. Use Q and E to rotate it.</p>
+<p>Use the WASD keys to move the spotlight. Use Q and E to rotate it. Click and drag to draw new walls.</p>
 <div class="rendering-wrapper">
     <canvas id="rendering-canvas" width="512" height="512"></canvas>
     <div>
