Add 'always draw walls' checkbox.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <input type="range" id="max-distance" min="1" max="4.0" step="0.1" value="2">
             <label for="fov"></label>
             <input type="range" id="fov" min="5" max="130" value="130">
+            <label style="padding-bottom: 8px">
+                <input type="checkbox" id="always-draw-walls"> Always draw walls
+            </label>
             <button type="button" id="clear-walls">Clear walls</button>
         </div>
         <pre id="rendering-stats"></pre>
