--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         image-rendering: pixelated;
         border: 1px solid black;
     }
-    label {
+    label, button {
         display: block;
     }
     #fatal-error {
@@ -33,7 +33,7 @@
 <title>Top-down 2D scene using a shadow map</title>
 <div id="fatal-error" class="hidden"></div>
 <h1>Top-down 2D scene using a shadow map</h1>
-<p>Use the WASD keys to move the spotlight. Use Q and E to rotate it.</p>
+<p>Use the WASD keys to move the spotlight. Use Q and E to rotate it. Click and drag to draw new walls.</p>
 <div class="rendering-wrapper">
     <canvas id="rendering-canvas" width="512" height="512"></canvas>
     <div>
@@ -44,6 +44,10 @@
             <input type="range" id="max-distance" min="1" max="4.0" step="0.1" value="2">
             <label for="fov"></label>
             <input type="range" id="fov" min="5" max="130" value="130">
+            <label style="padding-bottom: 8px">
+                <input type="checkbox" id="always-draw-walls"> Always draw walls
+            </label>
+            <button type="button" id="clear-walls">Clear walls</button>
         </div>
         <pre id="rendering-stats"></pre>
     </div>
